Add sample gui and realise sample sync then user click open file button

--- a/qml.qrc
+++ b/qml.qrc
@@ -1,6 +1,7 @@
 <RCC>
     <qresource prefix="/">
         <file>main.qml</file>
-        <file>MainForm.ui.qml</file>
+        <file>QMLButtonStyle.qml</file>
+        <file>QMLScroolBar.qml</file>
     </qresource>
 </RCC>
