Подправил вывод примеров и добавление комментариев

--- a/source/qml.qrc
+++ b/source/qml.qrc
@@ -35,5 +35,6 @@
         <file>VideoController.qml</file>
         <file>WebViewDialog.qml</file>
         <file>HtmlView.qml</file>
+        <file>images/go-home.png</file>
     </qresource>
 </RCC>
