Провёл рефакторинг qml кода

--- a/source/qml.qrc
+++ b/source/qml.qrc
@@ -51,29 +51,31 @@
         <file>qml/QML_FileDialogs.qml</file>
         <file>qml/QML_DialogBackground.qml</file>
         <file>qml/QML_ComboBox.qml</file>
-        <file>qml/PC_READ_TopToolBar.qml</file>
-        <file>qml/PC_READ_PageSettings.qml</file>
-        <file>qml/PC_READ_PageOpen.qml</file>
-        <file>qml/PC_READ_PageHome.qml</file>
-        <file>qml/PC_QML_ToolBarButton.qml</file>
-        <file>qml/PC_READ_ControlPanel.qml</file>
-        <file>qml/PC_READ_main.qml</file>
         <file>qml/images/cant-go-home.png</file>
         <file>qml/QML_WaitDialog.qml</file>
-        <file>qml/PC_WRITE_PageOpen.qml</file>
-        <file>qml/PC_WRITE_main.qml</file>
         <file>qml/images/trash.jpg</file>
         <file>qml/QML_YesNoDialog.qml</file>
-        <file>qml/PC_WRITE_PageHome.qml</file>
         <file>qml/QML_TextEditor.qml</file>
         <file>qml/QML_TextEditorDialog.qml</file>
         <file>qml/QML_NameDialog.qml</file>
-        <file>qml/PC_WRITE_TopToolBar.qml</file>
-        <file>qml/PC_WRITE_PropertyDialog.qml</file>
-        <file>qml/PC_WRITE_Propertyes.qml</file>
         <file>qml/QML_ImageButton.qml</file>
         <file>qml/QML_BrightnessButton.qml</file>
         <file>qml/QML_CommentList.qml</file>
         <file>qml/QML_CommentSellectDialog.qml</file>
+        <file>qml/WRITE_main.qml</file>
+        <file>qml/WRITE_PropertyDialog.qml</file>
+        <file>qml/WRITE_Propertyes.qml</file>
+        <file>qml/WRITE_TopToolBar.qml</file>
+        <file>qml/READ_main.qml</file>
+        <file>qml/READ_TopToolBar.qml</file>
+        <file>qml/READ_TextAreaContextMenue.qml</file>
+        <file>qml/WRITE_TextAreaContextMenue.qml</file>
+        <file>qml/QML_ToolBarButton.qml</file>
+        <file>qml/QML_ControlPanel.qml</file>
+        <file>qml/QML_HomePageInfoView.qml</file>
+        <file>qml/QML_PageHome.qml</file>
+        <file>qml/QML_PageOpen.qml</file>
+        <file>qml/QML_PageSettings.qml</file>
+        <file>qml/QML_main.qml</file>
     </qresource>
 </RCC>
